added html code in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+	<title>gittest</title>
+</head>
+<body>
+	<ul>
+		<li>apple</li>
+		<li>banana</li>
+
+	</ul>
+
+</body>
+</html>
